--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -13,25 +13,32 @@
  /*Scrollable Cards*/
  .bookshelf {
   display: grid;
-  grid-auto-columns: 100%;
-  grid-column-gap: 10px;
+  //max-height: 20vh;
+  //grid-auto-columns: 100%;
+  //grid-column-gap: 20px;
   grid-auto-flow: column;
   overflow-x: scroll;
 }
-@media (min-width: 500px) {
-  .bookshelf {
-    grid-auto-columns: calc(100% / 3);
-  }
+// @media (min-width: 500px) {
+//   .bookshelf {
+//     grid-auto-columns: 25%;
+//   }
+// }
+// @media (min-width: 700px) {
+//   .bookshelf {
+//     grid-auto-columns: 20%;
+//   }
+// }
+// @media (min-width: 1100px) {
+//   .bookshelf {
+//     grid-auto-columns: 10%;
+//   }
+// }
+.small {
+  width:fit-content
 }
-@media (min-width: 700px) {
-  .bookshelf {
-    grid-auto-columns: 25%;
-  }
-}
-@media (min-width: 1100px) {
-  .bookshelf {
-    grid-auto-columns: 20%;
-  }
+.small > img {
+  max-height: 10vh;
 }
 
 /* Card Links */
