Added Remaining Databases Getting More Item Details

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -35,10 +35,8 @@
 //   }
 // }
 .small {
-  width:fit-content
-}
-.small > img {
-  max-height: 10vh;
+  width:fit-content;
+  max-height: 20vh;
 }
 
 /* Card Links */
